--- a/src/app/canvas/canvas.component.scss
+++ b/src/app/canvas/canvas.component.scss
@@ -1,23 +1,55 @@
 .container {
   width: 100%;
   height: 100%;
-  
-  .canvas-container {
-    width: 282px;
-    height: 282px;
-    padding: 10px 20px;
-    margin: auto;
 
-    canvas {
-      margin: auto;
-      border: 1px solid black;
+  .input-container {
+
+    .canvas-container {
+      width: 282px;
+      margin: 0 auto 20px;
+  
+      .title {
+        text-align: center;
+        margin: 10px 0;
+      }
+  
+      canvas {
+        margin: auto;
+        border: 1px solid black;
+      }
+    }
+  
+    .divider {
+      display: flex;
+      justify-content: space-between;
+  
+      .mat-divider {
+        position: static;
+        border-color: black;
+        width: 100%;
+        height: 0;
+        margin: auto 10px;
+      }
+    }
+  
+    .image-upload {
+      margin: 20px 0;
+      display: flex;
+      justify-content: center;
+  
+      button {
+        width: 282px;
+  
+        .text {
+          margin-right: 20px;
+        }
+      }
     }
   }
 
   .actions-container {
-    width: 50%;
-    margin: auto;
+    margin: 40px auto 0;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 }
