Add statistics module

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -2,7 +2,7 @@
   <mat-card class="input-container">
     <div class="canvas-container">
       <p class="title">Draw a number</p>
-      <canvas #canvas></canvas>
+      <canvas #canvas id="draw-canvas"></canvas>
     </div>
     <div class="divider">
       <mat-divider></mat-divider>
