Add train dialog and imporve statistics

--- a/src/app/neural-network/neural-network.component.html
+++ b/src/app/neural-network/neural-network.component.html
@@ -12,7 +12,7 @@
     mat-flat-button
     color="primary"
     value="test"
-    (click)="train()"
+    (click)="openTrainModal()"
   >
     Train Network
   </button>
