--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,6 +1,9 @@
-<div class="container">
-  <h3 class="title">Prediction Statistics</h3>
-  <div *ngFor="let prediction of predictions; let i = index" class="stats">
+<button class="close-button" mat-icon-button mat-dialog-close>
+  <mat-icon>close</mat-icon>
+</button>
+<h3 class="title" mat-dialog-title>Prediction Statistics</h3>
+<div class="container" mat-dialog-content>
+  <mat-card *ngFor="let prediction of predictions; let i = index" class="stats">
     <img src="{{ imagesURL[i] }}" />
     <div class="bars">
       <div
@@ -9,8 +12,9 @@
         [style.height]="value * 100 + '%'"
         [style.margin-top]="100 - value * 100 + 'px'"
       >
-        <span>{{label}}</span>
+        <span class="value">{{(value * 100).toFixed(0) + '%'}}</span>
+        <span class="label">{{label}}</span>
       </div>
     </div>
-  </div>
+  </mat-card>
 </div>
