--- a/src/app/statistics/statistics.component.scss
+++ b/src/app/statistics/statistics.component.scss
@@ -1,3 +1,10 @@
+.close-button {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
 .container {
   .title {
     text-align: center;
@@ -15,27 +22,43 @@
     }
 
     .bars {
-      width: 300px;
+      width: 100%;
       height: 100px;
-      border: 1px solid gray;
-      padding: 20px 10px;
+      border: 2px inset lightgray;
+      padding: 25px 10px;
       display: flex;
       justify-content: space-between;
       margin: auto 0;
 
       .bar {
-        background-color: black;
+        background-color: #3f51b5;
         width: 20px;
         position: relative;
 
-        span {
+
+        span.value {
+          font-size: 10px;
           position: absolute;
-          bottom: -20px;
+          top: -15px;
+          left: 0;
+          right: 0;
+          text-align: center;
+        }
+
+        span.label {
+          position: absolute;
+          bottom: -25px;
           left: 0;
           right: 0;
           text-align: center;
         }
       }
     }
+  }
+}
+
+@media (max-width: 600px) {
+  .close-button {
+    display: block;
   }
 }
