--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 @media (max-width: 600px) {
   .custom-dialog {
-    min-width: 100vw !important;
-    min-height: 100vh !important;
+    min-width: 100% !important;
+    min-height: 100% !important;
   }
 }
