--- a/src/app/statistics/statistics.component.scss
+++ b/src/app/statistics/statistics.component.scss
@@ -30,11 +30,20 @@
       justify-content: space-between;
       margin: auto 0;
 
+
       .bar {
         background-color: #3f51b5;
         width: 20px;
         position: relative;
 
+        &.active {
+          background-color: green;
+          opacity: 0.8;
+
+          span {
+            color: green;
+          }
+        }
 
         span.value {
           font-size: 10px;
