--- a/src/app/statistics/statistics.component.scss
+++ b/src/app/statistics/statistics.component.scss
@@ -16,8 +16,9 @@
     height: 150px;
 
     img {
-      width: 28px;
-      height: 28px;
+      width: 20px;
+      height: 20px;
+      padding: 4px;
       margin: auto 0;
     }
 
