--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,4 +39,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     min-width: 100% !important;
     min-height: 100% !important;
   }
+
+  .mat-expansion-panel-body {
+    padding: 0 9px 6px !important;
+  }
 }
